--- a/notebooks/practico1.ipynb
+++ b/notebooks/practico1.ipynb
@@ -1864,7 +1864,7 @@
     }
    ],
    "source": [
-    "SEPARATOR = \"=\"*100\n",
+    "SEPARATOR = \"=\"*80\n",
     "latin_america_data = dataset[dataset['region'] == 'Latin America & the Caribbean']\n",
     "rest_of_world_data = dataset[dataset['region'] != 'Latin America & the Caribbean']\n",
     "\n",
@@ -1913,7 +1913,6 @@
     "    # Comprobación manual de las medianas para la variable pf_identity \n",
     "    \n",
     "    data_cleaned = dataset[variable].dropna()\n",
-    "    print(\"1111111111111111\")\n",
     "    data_sorted = data_cleaned.sort_values(ascending=True)\n",
     "    data_sorted = data_cleaned.sort_index(ascending=True)\n",
     "\n",
@@ -2374,7 +2373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 532,
    "metadata": {},
    "outputs": [
     {
@@ -2390,10 +2389,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a29efc710>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2abe1358>"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 532,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2444,7 +2443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 533,
    "metadata": {},
    "outputs": [
     {
@@ -2453,20 +2452,20 @@
        "KstestResult(statistic=0.23673609609146884, pvalue=2.0004263167944867e-68)"
       ]
      },
-     "execution_count": 519,
+     "execution_count": 533,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clean_dataset = dataset['pf_identity'].dropna()\n",
-    "normalized_pf_identity = (clean_dataset - clean_dataset.mean()) / clean_dataset.std()\n",
-    "stats.kstest(normalized_pf_identity, 'norm')\n"
+    "normalized_global_pf_identity = (clean_dataset - clean_dataset.mean()) / clean_dataset.std()\n",
+    "stats.kstest(normalized_global_pf_identity, 'norm')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 535,
    "metadata": {},
    "outputs": [
     {
@@ -2475,7 +2474,7 @@
        "KstestResult(statistic=0.35088781204626546, pvalue=4.8166522633069314e-26)"
       ]
      },
-     "execution_count": 520,
+     "execution_count": 535,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2488,7 +2487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 536,
    "metadata": {},
    "outputs": [
     {
@@ -2497,20 +2496,20 @@
        "KstestResult(statistic=0.06597824906177652, pvalue=1.1677888753166128e-05)"
       ]
      },
-     "execution_count": 521,
+     "execution_count": 536,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clean_dataset = dataset['hf_score'].dropna()\n",
-    "normalized_hf_score = (clean_dataset - clean_dataset.mean()) / clean_dataset.std()\n",
-    "stats.kstest(normalized_hf_score, 'norm')"
+    "normalized_global_hf_score = (clean_dataset - clean_dataset.mean()) / clean_dataset.std()\n",
+    "stats.kstest(normalized_global_hf_score, 'norm')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 537,
    "metadata": {},
    "outputs": [
     {
@@ -2519,7 +2518,7 @@
        "KstestResult(statistic=0.1504746027707088, pvalue=4.737935317381503e-05)"
       ]
      },
-     "execution_count": 522,
+     "execution_count": 537,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2618,7 +2617,7 @@
     "a = np.random.normal(0, 1, n)\n",
     "\n",
     "# Normalized global pf_identity\n",
-    "b = normalized_pf_identity\n",
+    "b = normalized_global_pf_identity\n",
     "percs = np.linspace(0, 100, n)\n",
     "qn_a = np.percentile(a, percs)\n",
     "qn_b = np.percentile(b, percs)\n",
@@ -2649,7 +2648,7 @@
     "\n",
     "\n",
     "# Normalized global hf_score\n",
-    "b = normalized_hf_score\n",
+    "b = normalized_global_hf_score\n",
     "percs = np.linspace(0, 100, n)\n",
     "qn_a = np.percentile(a, percs)\n",
     "qn_b = np.percentile(b, percs)\n",
@@ -2679,270 +2678,73 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 3.4)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 543,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "Normalized global pf_identity\n",
+      "Excess kurtosis of normal distribution (should be 0): -0.4148322234251629\n",
+      "Skewness of normal distribution (should be 0): -0.9121780542847566\n",
+      "================================================================================\n",
+      "Nnormalized LA pf_identity\n",
+      "Excess kurtosis of normal distribution (should be 0): -0.2953048553672599\n",
+      "Skewness of normal distribution (should be 0): -1.047844021622469\n",
+      "================================================================================\n",
+      "Normalized global hf_score\n",
+      "Excess kurtosis of normal distribution (should be 0): -0.5101904315124792\n",
+      "Skewness of normal distribution (should be 0): -0.212051904376911\n",
+      "================================================================================\n",
+      "Normalized LA hf_score\n",
+      "Excess kurtosis of normal distribution (should be 0): 5.340188962725749\n",
+      "Skewness of normal distribution (should be 0): -1.4420921513321425\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import kurtosis, skew\n",
+    "SEPARATOR = \"=\"*80\n",
+    "print(SEPARATOR)\n",
+    "print(\"Normalized global pf_identity\")\n",
+    "print('Excess kurtosis of normal distribution (should be 0): {0}'.format( kurtosis(normalized_global_pf_identity)))\n",
+    "print('Skewness of normal distribution (should be 0): {0}'.format( skew(normalized_global_pf_identity)))\n",
+    "\n",
+    "print(SEPARATOR)\n",
+    "print(\"Nnormalized LA pf_identity\")\n",
+    "print('Excess kurtosis of normal distribution (should be 0): {0}'.format( kurtosis(normalized_la_pf_identity)))\n",
+    "print('Skewness of normal distribution (should be 0): {0}'.format( skew(normalized_la_pf_identity)))\n",
+    "\n",
+    "print(SEPARATOR)\n",
+    "print(\"Normalized global hf_score\")\n",
+    "print('Excess kurtosis of normal distribution (should be 0): {0}'.format( kurtosis(normalized_global_hf_score)))\n",
+    "print('Skewness of normal distribution (should be 0): {0}'.format( skew(normalized_global_hf_score)))\n",
+    "\n",
+    "print(SEPARATOR)\n",
+    "print(\"Normalized LA hf_score\")\n",
+    "print('Excess kurtosis of normal distribution (should be 0): {0}'.format( kurtosis(normalized_la_hf_score)))\n",
+    "print('Skewness of normal distribution (should be 0): {0}'.format( skew(normalized_la_hf_score)))\n",
+    "\n",
+    "\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Poner aca algunas  concluciones, la Normalized global hf_score es Normal segun los ultimos 2 expermientos\n",
+    "hay qye ver por que KS dio un p-valor tan bajo"
+   ]
   },
   {
    "cell_type": "markdown",
