--- a/notebooks/practico1_nahuel.ipynb
+++ b/notebooks/practico1_nahuel.ipynb
@@ -2073,6 +2073,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De las medidas de correlación posibles, descartamos Pearson, porque las variables no tienen una distribución normal. También descartamos Kendall dado que las variables son cuantitativas y no cualitativas. En cuanto a Spearman, lo podemos utilizar ya que sirve tanto para todo tipo de variables ordinales."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 290,
    "metadata": {},
@@ -2140,6 +2147,13 @@
    ],
    "source": [
     "df[['pf_identity', 'hf_score', 'ef_score']].corr(method='spearman')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con la tabla anterior podemos ver que, tal como conjeturamos a partir de los gráficos de correlación, la variable pf_identity se correlaciona con hf_score. También existe una correlación (más débil) con ef_score, que resulta más difícil de ver en forma gráfica."
    ]
   },
   {
