--- a/notebooks/practico1.ipynb
+++ b/notebooks/practico1.ipynb
@@ -2042,7 +2042,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se pueden remover los valores NaN  usando la función **dropna()**"
+    "Se pueden remover los valores NaN usando la función **dropna()**"
    ]
   },
   {
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2071,16 +2071,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a25065dd8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a223f8a90>"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     },
