--- a/notebooks/practico1.ipynb
+++ b/notebooks/practico1.ipynb
@@ -3532,7 +3532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4.4)**\n"
+    "De las medidas de correlación posibles, descartamos Pearson, porque las variables no tienen una distribución normal. También descartamos Kendall dado que las variables son cuantitativas y no cualitativas. En cuanto a Spearman, lo podemos utilizar ya que sirve tanto para todo tipo de variables ordinales."
    ]
   },
   {
