--- a/notebooks/practico1.ipynb
+++ b/notebooks/practico1.ipynb
@@ -2024,7 +2024,7 @@
     "\n",
     "Por otro lado los promedios de la variable **hf_score** (tanto globalmente como para LA) son levemente superiores al valor medio posible (~6-7.x  > 5) y coinciden con las medianas (tanto globalmente como para LA).\n",
     "\n",
-    "Tambien se observa que la desviación estandar es mayor para la variable **hf_score** que respecto a la variable pf_identity (globalmente y para la region LA), lo que indica la presencia de valores mas sesgados para esta variable,  mientras que la variable **pf_identity** tiene valores mas concentrados  y cercanos a su valor medio. \n",
+    "Tambien se observa que la desviación estandar es mayor para la variable **hf_score** que respecto a la variable **pf_identity** (globalmente y para la region LA), lo que indica la presencia de valores mas sesgados para esta variable,  mientras que la variable **pf_identity** tiene valores mas concentrados y cercanos a su valor medio. \n",
     "\n",
     "Por dichas diferencias observados en los calculos de medias y desviaciones se concluye que ambas variables no son directamente comparables.\n",
     "\n",
@@ -3131,6 +3131,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al graficar las CDF de la variable hf_score normalizada y de la distribución normal, se puede ver que ambas son muy parecidas. De hecho, gráficamente se puede ver que el supremo de sus diferencias no es mayor que 0.2. Sin embargo, el test de KS del paquete scipy.stats, da un estadístico mayor a 0.9999. Este resultado es contradictorio, pero no pudimos determinar cuál es el problema."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 211,
    "metadata": {},
@@ -3253,7 +3260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los gráficos QQ se condicen con el test de KS para los casos de hf_score (global y Latinoamérica) y para **hf_score** en Latinoamérica. Para el caso restante (hf_score global), el gráfico QQ pareciera indicar que la variable podría ser consistente con una distribución normal. En este sentido, el gráfico es consistente con la gráfica de las CDF presentada anteriormente, y contradictorio con el resultado del test de KS."
+    "Los gráficos QQ demuestran que las variables no se ajustan cin una distribución normal. Esto confirma los resultados obtenidos con el test KS, sin embargo  para la variable **hf_score** a nivel global, el gráfico QQ pareciera indicar que la variable podría ser consistente con una distribución normal. En este sentido, el gráfico es consistente con la gráfica de las CDF presentada anteriormente, y contradictorio con el resultado del test de KS."
    ]
   },
   {
@@ -3371,6 +3378,13 @@
    "source": [
     "df = dataset[['pf_identity','hf_score', 'ef_score']]\n",
     "g = sb.pairplot(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El gráfico de correlación no es el más adecuado para la variable hf_identity, ya que la mayoría de los datos contienen un valor igual a 10. Eso hace que tengamos muy pocos datos en el resto del rango para comparar. Haciendo esta salvedad, podemos observar que existe una correlación entre esta variable y hf_score, pero no puede observarse una clara correlación con ef_score. Con respecto a las otras dos variables, existe una marcada correlación entre las mismas."
    ]
   },
   {
@@ -3533,6 +3547,13 @@
    "metadata": {},
    "source": [
     "De las medidas de correlación posibles, descartamos Pearson, porque las variables no tienen una distribución normal. También descartamos Kendall dado que las variables son cuantitativas y no cualitativas. En cuanto a Spearman, lo podemos utilizar ya que sirve tanto para todo tipo de variables ordinales."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con la tabla anterior podemos ver que, tal como conjeturamos a partir de los gráficos de correlación, la variable pf_identity se correlaciona con **hf_score. También existe una correlación (más débil) con ef_score, que resulta más difícil de ver en forma gráfica."
    ]
   },
   {
