Corregidos ultimos detalles

--- a/notebooks/practico1_nahuel.ipynb
+++ b/notebooks/practico1_nahuel.ipynb
@@ -1737,6 +1737,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al graficar las CDF de la variable hf_score normalizada y de la distribución normal, se puede ver que ambas son muy parecidas. De hecho, gráficamente se puede ver que el supremo de sus diferencias no es mayor que 0.2. Sin embargo, el test de KS del paquete scipy.stats, da un estadístico mayor a 0.9999. Este resultado es contradictorio, pero no pudimos determinar cuál es el problema. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 244,
    "metadata": {},
@@ -1851,6 +1858,13 @@
     "legend = plt.legend(loc='upper center', shadow=True, fontsize='x-large')\n",
     "plt.title('QQ N(0,1) vs Normalized LA hf_score variable')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los gráficos QQ se condicen con el test de KS para los casos de pf_score (global y Latinoamérica) y para hf_score en Latinoamérica. Para el caso restante (hf_score global), el gráfico QQ pareciera indicar que la variable podría ser consistente con una distribución normal. En este sentido, el gráfico es consistente con la gráfica de las CDF presentada anteriormente, y contradictorio con el resultado del test de KS."
    ]
   },
   {
@@ -2178,6 +2192,18 @@
     "\n",
     "\n",
     "    3)Estos dos estimadores, ¿se relacionan de la misma manera con la libertad de identidad?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El indicador de libertad de identidad muestra una tendencia a la baja en los últimos años. De acuerdo con los datos analizados, entre 2008 y 2016 este parámetro bajó unos 0.5 puntos. Al observar el caso particular de Latinoamérica y Caribe, se puede ver que la región mantuvo valores aproximadamente constantes hasta 2013, y que se registró una disminución en los dos años subsiguientes. La variación global, entonces, difiere significativamente con nuestra región.\n",
+    "\n",
+    "Algo para destacar es la diferencia que existe entre las dos regiones africanas y de medio oriente. Mientras que el África subsahariana ha mejorado este indicador en más de un punto, Medio Oriente y África del Norte ha empeorado su situación, constituyendo la región con los valores más bajos en todos los años.\n",
+    "\n",
+    "Los estimadores de libertad económica y libertad humana presentan correlaciones con la libertad de indentidad. Sin embargo, la correlación es más significativa con el estimador de libertad humana. De acuerdo con esto, podríamos decir que los factores económicos no son los más significativos a la hora de determinar el nivel de libertar de identidad.\n",
+    "\n"
    ]
   }
  ],
