--- a/notebooks/practico1.ipynb
+++ b/notebooks/practico1.ipynb
@@ -2148,7 +2148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Con la tabla anterior podemos ver que, tal como conjeturamos a partir de los gráficos de correlación, la variable **pf_identity** se correlaciona con **hf_score**. También existe una correlación (más débil) con ef_score, que resulta más difícil de ver en forma gráfica."
+    "Con la tabla anterior podemos ver que, tal como conjeturamos a partir de los gráficos de correlación, la variable **pf_identity** se correlaciona con **hf_score**. También existe una correlación (más débil) con **ef_score**, que resulta más difícil de ver en forma gráfica."
    ]
   },
   {
