--- a/AnalisisyCuracion/R/ejer1/class1.Rmd
+++ b/AnalisisyCuracion/R/ejer1/class1.Rmd
@@ -853,7 +853,8 @@ fligths<-nycflights13::flights
 
 - Que arribaron con un retraso de mas de dos horas.
 ```{r echo=TRUE}
-fligths_delay_2 <- fligths[fligths$dep_delay > 2,]
+fligths_delay_2 <- fligths[fligths$arr_delay > 120,]
+
 ```
 
 - Volaron hacia Houston (IAH o HOU)
@@ -874,13 +875,14 @@ fligths_spring <- fligths[(fligths$month == 7)  | (fligths$month == 8)  | (fligt
 
 - Arrivaron mas de dos horas tarde, pero salieron bien.
 ```{r echo=TRUE}
-fligths_0_2 <- fligths[(fligths$dep_delay == 0)  & (fligths$arr_delay > 2), ]
+fligths_0_2 <- fligths[(fligths$dep_delay == 0)  & (fligths$arr_delay > 120), ]
 ```
 
 ***
+- Salieron entre medianoche y las 6 am.
 
 ```{r echo=TRUE}
-fligths_0_6 <- fligths[(fligths$hour >= 0)  & (fligths$hour <= 6), ]
+fligths_0_6 <- fligths[(fligths$dep_time >= 0)  & (fligths$dep_time <= 600), ]
 ```
 
 ***
