--- a/AnalisisyCuracion/python/sports.ipynb
+++ b/AnalisisyCuracion/python/sports.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Análisis del dataset \"120 years of Olympic history: athletes and results\" de Kaggle. El objetivo es entrenar un clasificador para reconocer atletas de distintos deportes basándonos en tres features: Edad, peso y altura. Utilizaremos un clasificador basado en el algoritmo k-means"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -371,13 +378,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
